# SewyLM

./: README.md  pyproject.toml  setup.cfg
src/sewylm/: SewyModel.py  __init__.py  nMoun.py
