[metadata]
name = SewyLM
version = 0.1.0
description = A Python library for SEWY language modeling.
author = Aarush Khilosia
author_email = aarushlikesllms@gmail.com
license = GPL-3.0
url = https://github.com/yourusername/SewyLM
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    torch
    transformers

[options.packages.find]
where = src